# liquid-handler

cnc/: Cargo.toml  Embed.toml  build.rs  flash_chip.sh
cnc/.cargo/: config.toml
cnc/src/: main.rs  stepper.rs
common/: Cargo.toml
common/src/: lib.rs  messages.rs  mutex.rs  usb.rs  wifi.rs
pump/: Cargo.toml  flash_chip.sh
pump-3/: Cargo.toml  Embed.toml
pump-3/.cargo/: config.toml
pump-3/src/: flow_sensor.rs  main.rs  mutex.rs  tmc2209.rs  usb.rs
pump/.cargo/: config.toml
pump/src/: flow_sensor.rs  main.rs  tmc2209.rs
