[package]
edition = "2021"
name = "pump-2"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "pump-2"
path = "./src/main.rs"

[dependencies]
defmt = { version = "1.0.1", features = ["alloc"] }
deku = { version = "0.19", default-features = false, features = [
  "alloc",
  "bits",
] }
embedded-io-async = "0.7.0"
esp-alloc = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
thiserror = { version = "2.0.17", default-features = false }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

[patch.crates-io]
bitvec = { git = "https://github.com/ferrilab/ferrilab.git", package = "bitvec", rev = "aa1c33c934e734d0b05fe0b2ab61dfff8707de11" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = 2

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
