[package]
edition = "2021"
name = "common"
rust-version = "1.86"
version = "0.1.0"

[dependencies]
embedded-io-async = "0.7.0"
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
esp-sync = { version = "0.1.1", features = ["esp32s3"] }
thiserror = { version = "2.0.17", default-features = false }
deku = { version = "0.19", default-features = false, features = ["alloc"] }
esp-radio = { version = "0.17.0", features = ["esp32s3", "esp-now", "wifi", "unstable"] }
